# amp-sensor-backend

./: .gitignore  Cargo.toml  README.md  Rocket.example.toml  Rocket.toml  SECURITY.md  send-to-burato.sh
.github/workflows/: docs.yml  release.yml  rust.yml
.sqlx/: query-0428113450f9459e4a3fe2fe4380e9458fdefee0e30f5d2f821da30b89ea07d3.json  query-0644c4b5cb95b792256adfeb9cc272df212a77c53271068646d384e50b1ce0e4.json  query-0ff153dbcc929a091660d71b59f8d2c0ae78e86a89b44ce0dbee55740cd536e7.json  query-149000d4a879c809f77fafd73a7cebe8285ae42c4c85211dde1a3fbfd844812c.json  query-1bf2cad69a9c5f1f005e1ecf4eb12efdc52ee4a6be03a377c5d20125df06ab15.json  query-1e6ec707114e637e4a4860f0d691fe01baa432c166829204c5c97ae74654e86e.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-337432b160d024a1fd2a6cff3b7bb91f1ea11dc84fa1b4e2f0ec6364ec4bce47.json  query-3dbf61d2cb3fdc37e627f283f675f7798df41bbd88260267ecee392232888b13.json  query-42675c58c67498c7ba4521a772849b4b53837f61cedc5e627e377a562cd4baee.json  query-603224dca6e4007af39b95742d9baecc3343a4fafdbce1c6e39aa1cdc785990a.json  query-632857fb6ac60ed97a5203a7993f5d991461c4255a601ff8b4f6bd6300d414f8.json  query-6b09783989b873e1fb176b3bf696fe54ad4b264aa4b7f1d0031720ebff9afed1.json  query-8083cce16b71ea3b189fbac4211c6954da162dc4416d966ded709eb221190ec7.json  query-84c94a42edaf93c472b26026b5b317765b14203759d21b02637b125c7e31e255.json  query-afc5d9af537ea74e1fb90529d3a4d2f6868db3bd678a8ba9cd09a02ba1704ddc.json  query-b7f1371377b8f950756fe8e146b931098e3e1460939d2c122afa80f2e22cd614.json  query-d5a4b0b60898f19edf5c59a9573ed5604e30ad8414d0645ad667295822930064.json  query-dc7dd952edf3b4da982de957aad6aa25a1c1ac52390cbc0fe1b22890bf7f28be.json  query-ee16fb8e9f73305968b90084b08342add6e90a084ef06ab6d80c5de90325f08f.json  query-f9f59592a3165dc3c717e4e8da1a637eef75cbc4bab4dfc568379d6a38a081c6.json
migrations/: 0001_init.down.sql  0001_init.up.sql  0002_add_token.down.sql  0002_add_token.up.sql  0003_add_token_idx.down.sql  0003_add_token_idx.up.sql  0004_add_ua.down.sql  0004_add_ua.up.sql  0005_energy_float_fields.down.sql  0005_energy_float_fields.up.sql  0006_view_only_tokens.down.sql  0006_view_only_tokens.up.sql
src/: form.rs  main.rs  print_table.rs  tessie.rs  token.rs
src/alive_check/: mod.rs
(+10 files in other folders)
