[package]
name = "amp-sensor-tessie-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
governor = "0.6.3"
log = "0.4.21"
reqwest = "0.12.4"
rocket = { version = "0.5.1", features = ["json"], default-features = false }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
rocket-governor = { version = "0.2.0-rc.1", features = ["limit_info", "logger"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "=0.7.3", features = ["chrono", "macros", "migrate"], default-features = false }
openssl = { version = "0.10.66", features = ["vendored"] }
